<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/label_list_users" />

    </group>

    <item android:title="@string/label_configurations">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_add_country"
                    android:icon="@drawable/ic_add_location_black_24dp"
                    android:title="@string/label_add_country" />
                <item
                    android:id="@+id/nav_add_user"
                    android:icon="@drawable/ic_person_add_black_24dp"
                    android:title="@string/label_add_user" />
            </group>
        </menu>
    </item>

</menu>
