<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="br.com.gilbarco.clientes.ui.list_user.ListUserFragment"
        android:label="@string/label_list_users"
        tools:layout="@layout/fragment_list_users" />

    <fragment
        android:id="@+id/nav_list_countries"
        android:name="br.com.gilbarco.clientes.ui.list_country.ListCountryFragment"
        android:label="@string/label_list_country"
        tools:layout="@layout/fragment_list_countries" >
        <action
            android:id="@+id/action_nav_list_countries_to_nav_add_user"
            app:destination="@id/nav_add_user" />
    </fragment>

    <fragment
        android:id="@+id/nav_add_country"
        android:name="br.com.gilbarco.clientes.ui.register_country.RegisterCountryFragment"
        android:label="@string/label_add_country"
        tools:layout="@layout/fragment_register_user" />

    <fragment
        android:id="@+id/nav_add_user"
        android:name="br.com.gilbarco.clientes.ui.register_user.RegisterUserFragment"
        android:label="@string/label_add_user"
        tools:layout="@layout/fragment_register_country" >
        <action
            android:id="@+id/action_nav_add_user_to_nav_list_countries"
            app:destination="@id/nav_list_countries" />
    </fragment>
</navigation>